@@ -1,4 +1,7 @@
 v0.6.0, 2017-03-?? -- ???
+ * use boto3 instead of boto
+   * old boto make_*_conn() methods removed
+   * mrjob.fs.s3.wrap_aws_conn() removed
  * removed deprecated INPUT, OUTPUT attributes from JarStep
  * removed deprecated filesystem methods:
    * path_exists()
